--- a/css/style.css
+++ b/css/style.css
@@ -220,9 +220,36 @@ h3 {
 }
 
 .section {
+    width: 100px;
+    margin: 0 auto;
+    
+}
+.section h2{
     text-align: center;
+    width: 100px;
+    float: left;
+    margin-top: 50px;
+    color: #8A82CC;
 }
 
+hr{
+    width: 30%;
+    border-top: 2px dashed #559AC8;
+    display: inline-block;
+    float: left;
+}
+hr:first-child{
+    margin-left: 20%;
+}
+
+.hrimg{
+    background-image: url("../img/down.JPG");
+    background-size: 100%;
+    width: 24px;
+    height: 24px;
+    float: left;
+    margin-top: -5px;
+}
 
 /* ---------- content內容區 ---------- */
 
@@ -385,11 +412,13 @@ h3 {
 /* ---------- totop 滾到最上頁 ---------- */
 
 .totop{
-    width: 30px;
-    height: 30px;
+    width: 28px;
+    height: 28px;
     position: fixed;
     right:50px;
     bottom:50px;
+    background-image: url("../img/btn_goTop.png");
+    cursor: pointer;
 }
 
 
