--- a/css/style.css
+++ b/css/style.css
@@ -196,11 +196,11 @@ h1 {
 .hot {
     width: 800px;
     height: 120px;
-    margin: -5% auto;
+    margin: -50px auto;
     text-align: center;
     box-shadow: 1px 1px 10px 0.3px;
     position: relative;
-    z-index: 100px;
+    z-index: 100;
     background-color: white;
     border-radius: 10px;
 }
